--- a/Project/src/main/resources/application.properties
+++ b/Project/src/main/resources/application.properties
@@ -1,2 +1,15 @@
-
-
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.sql.init.mode=always
+spring.jpa.generate-ddl=false
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/baza
+spring.datasource.username=MyLogin
+spring.datasource.password=123123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.sql.init.username=MyLogin
+spring.sql.init.password=123123
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.database = MYSQL
+spring.jpa.show-sql = true
+spring.batch.jdbc.initialize-schema=always
